<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.quranapp.ui.view.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_sholat"
        android:name="com.example.quranapp.ui.view.SholatFragment"
        android:label="@string/title_sholat"
        tools:layout="@layout/fragment_sholat" >
        <action
            android:id="@+id/action_navigation_sholat_to_sholatDetailFragment"
            app:destination="@id/sholatDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_doa"
        android:name="com.example.quranapp.ui.view.DoaFragment"
        android:label="@string/title_doa"
        tools:layout="@layout/fragment_doa" >
        <action
            android:id="@+id/action_navigation_doa_to_detailSumberDoaFragment"
            app:destination="@id/detailSumberDoaFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_penanda"
        android:name="com.example.quranapp.ui.view.BookmarkFragment"
        android:label="@string/title_penanda"
        tools:layout="@layout/fragment_bookmark" />
    <fragment
        android:id="@+id/detailSumberDoaFragment"
        android:name="com.example.quranapp.ui.view.DetailSumberDoaFragment"
        android:label="fragment_detail_sumber_doa"
        tools:layout="@layout/fragment_detail_sumber_doa" />
    <fragment
        android:id="@+id/sholatDetailFragment"
        android:name="com.example.quranapp.ui.view.SholatDetailFragment"
        android:label="fragment_sholat_detail"
        tools:layout="@layout/fragment_sholat_detail" />
</navigation>