<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_nomor_ayat"
            style="@style/CustomFontStyleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/purple_gelap"
            app:layout_constraintBottom_toBottomOf="@+id/penanda_ayat"
            app:layout_constraintEnd_toEndOf="@+id/penanda_ayat"
            app:layout_constraintStart_toStartOf="@+id/penanda_ayat"
            app:layout_constraintTop_toTopOf="@+id/penanda_ayat"
            tools:text="@string/title_tab_1" />

        <ImageView
            android:id="@+id/penanda_ayat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_penanda_ayat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_nama_surah"
            style="@style/CustomFontStyleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="-8dp"
            android:textColor="@color/purple_gelap"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/penanda_ayat"
            app:layout_constraintTop_toTopOf="@+id/penanda_ayat"
            tools:text="@string/title_home" />

        <TextView
            android:id="@+id/tv_jenis_surah"
            style="@style/CustomFontStyleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/abu_abu"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_nama_surah"
            app:layout_constraintTop_toBottomOf="@+id/tv_nama_surah"
            tools:text="@string/title_doa" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="4dp"
            android:layout_height="4dp"
            android:layout_marginStart="4dp"
            android:alpha="0.2"
            app:cardBackgroundColor="@color/abu_abu"
            app:cardCornerRadius="100dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_jenis_surah"
            app:layout_constraintStart_toEndOf="@+id/tv_jenis_surah"
            app:layout_constraintTop_toTopOf="@+id/tv_jenis_surah" />

        <TextView
            android:id="@+id/tv_jumlah_ayat"
            style="@style/CustomFontStyleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textColor="@color/abu_abu"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_jenis_surah"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="@+id/tv_jenis_surah"
            tools:text="@string/jumlah_ayat" />

        <TextView
            android:id="@+id/tv_nama_surah_arab"
            style="@style/CustomFontStyleAmiri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/purple"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/title_doa" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>