<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="16dp"
    android:background="@color/white"
    android:layout_marginVertical="4dp"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginHorizontal="8dp"
            app:cardBackgroundColor="@color/abu_abu_muda"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="8dp"
                android:paddingVertical="8dp">

                <TextView
                    android:id="@+id/tv_nomor_ayat"
                    style="@style/CustomFontStyleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/purple_gelap"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toBottomOf="@+id/penanda_ayat"
                    app:layout_constraintEnd_toEndOf="@+id/penanda_ayat"
                    app:layout_constraintStart_toStartOf="@+id/penanda_ayat"
                    app:layout_constraintTop_toTopOf="@+id/penanda_ayat"
                    tools:text="@string/title_tab_1" />

                <ImageView
                    android:id="@+id/penanda_ayat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_penanda_ayat"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/bookmark_button"
                    style="?attr/materialIconButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/standar_icon_btn_desc"
                    app:icon="@drawable/icon_penanda"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/share_button"
                    style="?attr/materialIconButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/standar_icon_btn_desc"
                    app:icon="@drawable/icon_share"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/bookmark_button"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_ayat_arab"
            style="@style/CustomFontStyleAmiri"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="24dp"
            android:textAlignment="viewEnd"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2"
            tools:text="َﻦﻳِمَلٰعْلا ِّبَر ِهَّلِل ُدْمَحْلا" />


        <TextView
            android:id="@+id/terjemahan"
            android:layout_width="0dp"
            android:layout_marginHorizontal="8dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_ayat_arab"
            tools:text="@string/app_name" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>